--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,7 @@ app.jwtExpirationInMs = 604800000
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
+
+## Build
+bootJar.enabled=false
+jar.enabled=true
