--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,20 @@ configurations {
     }
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.'
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Main-class' : 'com.kakaopay.kakao.KakaoApplication'
+    }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+
 repositories {
     mavenCentral()
 }
@@ -37,6 +51,11 @@ dependencies {
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
     compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
     compile 'joda-time:joda-time:2.9.4'
+    compile("io.springfox:springfox-swagger2:2.9.2") {
+        exclude module: 'mapstruct'
+    }
+    compile "io.springfox:springfox-bean-validators:2.9.2"
+    compile "io.springfox:springfox-swagger-ui:2.9.2"
     implementation group:'org.javassist',name:'javassist',version:'3.15.0-GA'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -47,6 +66,3 @@ test {
     useJUnitPlatform()
     jvmArgs '--enable-preview'
 }
-
-
-apply plugin: 'io.spring.dependency-management'
